# CS3072

./: .env.example
apps/models/: package.json  pyproject.toml
apps/models/app/: main.py
apps/models/app/models/gda/: eval.py
apps/models/app/models/gda/notebooks/: dga-detector.ipynb  gda_lora_llm_attempt.ipynb
apps/models/app/models/gda/training/: dataset.py
apps/models/app/models/gda/utils/: instructions.py
apps/models/app/models/post_analyzer/: eval.py
apps/models/app/models/post_analyzer/services/: classify_image.py  classify_text.py
apps/models/app/modules/domains/: schema.py  services.py
apps/models/app/modules/posts/: model.py  router.py  schema.py  services.py
apps/nextjs/src/app/actor/[did]/: page.tsx
apps/nextjs/src/app/post/[id]/: page.tsx
apps/scheduler/src/lib/api/: models.ts
apps/scheduler/src/lib/bsky/: store-posts.ts
apps/scheduler/src/tasks/: _tasks-list.ts  check-inactive-resources.ts
apps/scheduler/src/tasks/analyze/: analyze-domain.ts  analyze-posts.ts
apps/scheduler/src/tasks/store/: store-actor-profile.ts  store-posts-by-actor.ts
